assgn, lectures, labs

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html class="index_main">
 <head>
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
@@ -52,12 +52,6 @@
     </div>
 </section>
 
-<section class="about">
-    <div class="container highlight-card" style="min-height:0px">
-        <h3>Welcome to CS132</h3>
-        </div>
-</section>
-
 <section class="course_info">
     <div class="info_list">
         
@@ -75,7 +69,7 @@
                 &bull;
             </p>
             <p class="text-right col-xs-12 col-sm-6 col-md-6">
-                <a href="mailto:cs132tas@lists.brown.edu">cs132tas@lists.brown.edu</a>
+                <a href="mailto:cs1320tas@lists.brown.edu">cs1320tas@lists.brown.edu</a>
             </p>
         </div>
     </footer>
