--- a/assignments.html
+++ b/assignments.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html class="assign_main">
 <head>
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
@@ -52,7 +52,7 @@
     </div>
 </section>
 
-<section class="assignments">
+<section class="assignments_list">
 	<div class="container">
         <table>
             <tr>
@@ -61,13 +61,62 @@
                 <th>Due Date</th>
             </tr>
             <tr>
-                <td> <a data-toggle="collapse" href="#midterm">Midterm</a></td>
-                <div id="midterm" class="panel-collapse collapse">
-                    <div class="list-group">
-                        <li class="list-group-item"> Part 1  </li>
-                        <li class="list-group-item"> Part 2 & 3 </li>
+                <td> <a data-toggle="collapse" href="#p1">Project 1</a>
+                    <div id="p1" class="collapse">
+                        <div class="list-group">
+                            <li class="list-group-item"> Part 1  </li>
+                            <li class="list-group-item"> Part 2 & 3 </li>
+                        </div>
                     </div>
-                </div>
+                </td>
+                <td>Feb 1</td>
+                <td>Feb 10</td>
+            </tr>
+            <tr>
+               <td> <a data-toggle="collapse" href="#p2">Project 2</a>
+                    <div id="p2" class="collapse">
+                        <div class="list-group">
+                            <li class="list-group-item"> Part 1  </li>
+                            <li class="list-group-item"> Part 2 & 3 </li>
+                        </div>
+                    </div>
+                </td>
+                <td>Feb 1</t d>
+                <td>Feb 10</td>
+            </tr>
+            <tr>
+               <td> <a data-toggle="collapse" href="#p3">Project 3</a>
+                    <div id="p3" class="collapse">
+                        <div class="list-group">
+                            <li class="list-group-item"> Part 1  </li>
+                            <li class="list-group-item"> Part 2 & 3 </li>
+                        </div>
+                    </div>
+                </td>
+                <td>Feb 1</td>
+                <td>Feb 10</td>
+            </tr>
+            <tr>
+               <td> <a data-toggle="collapse" href="#p4">Project 4</a>
+                    <div id="p4" class="collapse">
+                        <div class="list-group">
+                            <li class="list-group-item"> Part 1  </li>
+                            <li class="list-group-item"> Part 2 & 3 </li>
+                        </div>
+                    </div>
+                </td>
+                <td>Feb 1</td>
+                <td>Feb 10</td>
+            </tr>
+            <tr>
+               <td> <a data-toggle="collapse" href="#p5">Project 5</a>
+                    <div id="p5" class="collapse">
+                        <div class="list-group">
+                            <li class="list-group-item"> Part 1  </li>
+                            <li class="list-group-item"> Part 2 & 3 </li>
+                        </div>
+                    </div>
+                </td>
                 <td>Feb 1</td>
                 <td>Feb 10</td>
             </tr>
