--- a/lectures.html
+++ b/lectures.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html class="lectures_main">
 <head>
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
@@ -52,46 +52,71 @@
     </div>
 </section>
 
-<section class="about">
-    <div class="container highlight-card" style="min-height:0px">
-        <h3>Welcome to CS132</h3>
-        </div>
-</section>
-
-<section class="announcements">
+<section class="lectures_list">
     <div class="container">
-        <h3 style="margin: 0 0">Info</h3>
-
-        <ul class="announcements-list">
-        </ul>
+        <table>
+            <tr>
+                <th>Lecture Title</th>
+                <th>Date</th>
+            </tr>
+            <tr>
+                <td> <a data-toggle="collapse" href="#p1">Lecture 1</a>
+                    <div id="p1" class="collapse">
+                        <div class="list-group">
+                            <li class="list-group-item"> Part 1  </li>
+                            <li class="list-group-item"> Part 2 & 3 </li>
+                        </div>
+                    </div>
+                </td>
+                <td>Feb 1</td>
+            </tr>
+            <tr>
+               <td> <a data-toggle="collapse" href="#p2">Lecture 2</a>
+                    <div id="p2" class="collapse">
+                        <div class="list-group">
+                            <li class="list-group-item"> Part 1  </li>
+                            <li class="list-group-item"> Part 2 & 3 </li>
+                        </div>
+                    </div>
+                </td>
+                <td>Feb 1</td>
+            </tr>
+             <tr>
+               <td> <a data-toggle="collapse" href="#p3">Lecture 3</a>
+                    <div id="p3" class="collapse">
+                        <div class="list-group">
+                            <li class="list-group-item"> Part 1  </li>
+                            <li class="list-group-item"> Part 2 & 3 </li>
+                        </div>
+                    </div>
+                </td>
+                <td>Feb 1</td>
+            </tr>
+        </table>
     </div>
 </section>
 
-<section class="announcements">
-	<div class="container">
-	</div>
-</section>
-    <footer class="footer">
-        <div class="container" class>
-            <p class="courseName col-xs-12 col-sm-6 col-md-6">
-                CS132 Spring 2017
-                &bull;
-            </p>
-            <p class="text-right col-xs-12 col-sm-6 col-md-6">
-                <a href="mailto:cs132tas@lists.brown.edu">cs132tas@lists.brown.edu</a>
-            </p>
-        </div>
-    </footer>
-    <script src="static/js/main.js" type="text/javascript"></script>
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+<footer class="footer">
+    <div class="container" class>
+        <p class="courseName col-xs-12 col-sm-6 col-md-6">
+            CS132 Spring 2017
+            &bull;
+        </p>
+        <p class="text-right col-xs-12 col-sm-6 col-md-6">
+            <a href="mailto:cs132tas@lists.brown.edu">cs132tas@lists.brown.edu</a>
+        </p>
+    </div>
+</footer>
+<script src="static/js/main.js" type="text/javascript"></script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      ga('create', 'UA-49649749-2', 'auto');
-      ga('send', 'pageview');
-    </script>
+  ga('create', 'UA-49649749-2', 'auto');
+  ga('send', 'pageview');
+</script>
     
 </body>
 </html>
