--- a/resources.html
+++ b/resources.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html class="resources_main">
 <head>
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
@@ -37,8 +37,8 @@
                     <li ><a href="assignments.html"><b>Assignments</b></a></li>
                     <li ><a href="calendar.html"><b>Calendar</b></a></li>
                     <li ><a href="lectures.html"><b>Lectures</b></a></li>
-                    <li ><a href="labs.html"><b>Labs</b></a></li>
-                    <li class="active"><a href="resources.html"><b>Resources</b></a></li>
+                    <li class="active"><a href="labs.html"><b>Labs</b></a></li>
+                    <li ><a href="resources.html"><b>Resources</b></a></li>
                     <li ><a href="staff.html"><b>Staff</b></a></li>
                 </ul>
             </div>
@@ -48,50 +48,104 @@
 <section class="view_top">
     <div class="container">
         <h1>CS132</h1>
-        <div class="view_top"><h2>Resources</h2></div>
+        <div class="labs_view_top"><h2>Labs</h2></div>
     </div>
 </section>
 
-<section class="about">
-    <div class="container highlight-card" style="min-height:0px">
-        <h3>Welcome to CS132</h3>
-        </div>
-</section>
-
-<section class="announcements">
+<section class="labs_list">
     <div class="container">
-        <h3 style="margin: 0 0">Info</h3>
-
-        <ul class="announcements-list">
-        </ul>
+        <table>
+            <tr>
+                <th>Pre Lab</th>
+                <th>Lab</th>
+                <th>Date</th>
+            </tr>
+            <tr>
+                <td> <a data-toggle="collapse" href="#p1">Lab 1</a>
+                    <div id="p1" class="collapse">
+                        <div class="list-group">
+                            <li class="list-group-item"> Part 1  </li>
+                            <li class="list-group-item"> Part 2 & 3 </li>
+                        </div>
+                    </div>
+                </td>
+                <td>Feb 1</td>
+                <td>Feb 10</td>
+            </tr>
+            <tr>
+               <td> <a data-toggle="collapse" href="#p2">Lab 2</a>
+                    <div id="p2" class="collapse">
+                        <div class="list-group">
+                            <li class="list-group-item"> Part 1  </li>
+                            <li class="list-group-item"> Part 2 & 3 </li>
+                        </div>
+                    </div>
+                </td>
+                <td>Feb 1</t d>
+                <td>Feb 10</td>
+            </tr>
+            <tr>
+               <td> <a data-toggle="collapse" href="#p3">Lab 3</a>
+                    <div id="p3" class="collapse">
+                        <div class="list-group">
+                            <li class="list-group-item"> Part 1  </li>
+                            <li class="list-group-item"> Part 2 & 3 </li>
+                        </div>
+                    </div>
+                </td>
+                <td>Feb 1</td>
+                <td>Feb 10</td>
+            </tr>
+            <tr>
+               <td> <a data-toggle="collapse" href="#p4">Lab 4</a>
+                    <div id="p4" class="collapse">
+                        <div class="list-group">
+                            <li class="list-group-item"> Part 1  </li>
+                            <li class="list-group-item"> Part 2 & 3 </li>
+                        </div>
+                    </div>
+                </td>
+                <td>Feb 1</td>
+                <td>Feb 10</td>
+            </tr>
+            <tr>
+               <td> <a data-toggle="collapse" href="#p5">Lab 5</a>
+                    <div id="p5" class="collapse">
+                        <div class="list-group">
+                            <li class="list-group-item"> Part 1  </li>
+                            <li class="list-group-item"> Part 2 & 3 </li>
+                        </div>
+                    </div>
+                </td>
+                <td>Feb 1</td>
+                <td>Feb 10</td>
+            </tr>
+        </table>
     </div>
 </section>
 
-<section class="announcements">
-	<div class="container">
-	</div>
-</section>
-    <footer class="footer">
-        <div class="container" class>
-            <p class="courseName col-xs-12 col-sm-6 col-md-6">
-                CS132 Spring 2017
-                &bull;
-            </p>
-            <p class="text-right col-xs-12 col-sm-6 col-md-6">
-                <a href="mailto:cs132tas@lists.brown.edu">cs132tas@lists.brown.edu</a>
-            </p>
-        </div>
-    </footer>
-    <script src="static/js/main.js" type="text/javascript"></script>
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      ga('create', 'UA-49649749-2', 'auto');
-      ga('send', 'pageview');
-    </script>
+<footer class="footer">
+    <div class="container" class>
+        <p class="courseName col-xs-12 col-sm-6 col-md-6">
+            CS132 Spring 2017
+            &bull;
+        </p>
+        <p class="text-right col-xs-12 col-sm-6 col-md-6">
+            <a href="mailto:cs132tas@lists.brown.edu">cs132tas@lists.brown.edu</a>
+        </p>
+    </div>
+</footer>
+<script src="static/js/main.js" type="text/javascript"></script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-49649749-2', 'auto');
+  ga('send', 'pageview');
+</script>
     
 </body>
 </html>
