--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-
-    <title>CSCI1800</title>
+    <title>CS132</title>
     <meta content='Modern Web Apps' name='description'>
     <meta content='width=device-width, initial-scale=1.0' name='viewport'>
     <!-- jQuery and Bootstrap -->
@@ -62,27 +61,26 @@
 	<div class="container">
 	</div>
 </section>
+
+<div>
     <footer class="footer">
         <div class="container" class>
-            <p class="courseName col-xs-12 col-sm-6 col-md-6">
-                CS132 Spring 2017
-                &bull;
-            </p>
-            <p class="text-right col-xs-12 col-sm-6 col-md-6">
-                <a href="mailto:cs1320tas@lists.brown.edu">cs1320tas@lists.brown.edu</a>
-            </p>
+            <p class="footer_title">CS132 Spring 2017</p>
+            <p><a href="mailto:cs132tas@lists.brown.edu">cs132tas@lists.brown.edu</a></p>
         </div>
     </footer>
-    <script src="static/js/main.js" type="text/javascript"></script>
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+</div>
 
-      ga('create', 'UA-49649749-2', 'auto');
-      ga('send', 'pageview');
-    </script>
+<script src="static/js/main.js" type="text/javascript"></script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-49649749-2', 'auto');
+  ga('send', 'pageview');
+</script>
     
 </body>
 </html>
