--- a/labs.html
+++ b/labs.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-
-    <title>CSCI1800</title>
+    <title>CS132</title>
     <meta content='Modern Web Apps' name='description'>
     <meta content='width=device-width, initial-scale=1.0' name='viewport'>
     <!-- jQuery and Bootstrap -->
@@ -120,22 +119,127 @@
                 <td>Feb 1</td>
                 <td>Feb 10</td>
             </tr>
+             <tr>
+               <td> <a data-toggle="collapse" href="#p5">Lab 6</a>
+                    <div id="p5" class="collapse">
+                        <div class="list-group">
+                            <li class="list-group-item"> Part 1  </li>
+                            <li class="list-group-item"> Part 2 & 3 </li>
+                        </div>
+                    </div>
+                </td>
+                <td>Feb 1</td>
+                <td>Feb 10</td>
+            </tr>
+             <tr>
+               <td> <a data-toggle="collapse" href="#p5">Lab 7</a>
+                    <div id="p5" class="collapse">
+                        <div class="list-group">
+                            <li class="list-group-item"> Part 1  </li>
+                            <li class="list-group-item"> Part 2 & 3 </li>
+                        </div>
+                    </div>
+                </td>
+                <td>Feb 1</td>
+                <td>Feb 10</td>
+            </tr>
+             <tr>
+               <td> <a data-toggle="collapse" href="#p5">Lab 8</a>
+                    <div id="p5" class="collapse">
+                        <div class="list-group">
+                            <li class="list-group-item"> Part 1  </li>
+                            <li class="list-group-item"> Part 2 & 3 </li>
+                        </div>
+                    </div>
+                </td>
+                <td>Feb 1</td>
+                <td>Feb 10</td>
+            </tr>
+             <tr>
+               <td> <a data-toggle="collapse" href="#p5">Lab 9</a>
+                    <div id="p5" class="collapse">
+                        <div class="list-group">
+                            <li class="list-group-item"> Part 1  </li>
+                            <li class="list-group-item"> Part 2 & 3 </li>
+                        </div>
+                    </div>
+                </td>
+                <td>Feb 1</td>
+                <td>Feb 10</td>
+            </tr>
+             <tr>
+               <td> <a data-toggle="collapse" href="#p5">Lab 10</a>
+                    <div id="p5" class="collapse">
+                        <div class="list-group">
+                            <li class="list-group-item"> Part 1  </li>
+                            <li class="list-group-item"> Part 2 & 3 </li>
+                        </div>
+                    </div>
+                </td>
+                <td>Feb 1</td>
+                <td>Feb 10</td>
+            </tr>
+             <tr>
+               <td> <a data-toggle="collapse" href="#p5">Lab 11</a>
+                    <div id="p5" class="collapse">
+                        <div class="list-group">
+                            <li class="list-group-item"> Part 1  </li>
+                            <li class="list-group-item"> Part 2 & 3 </li>
+                        </div>
+                    </div>
+                </td>
+                <td>Feb 1</td>
+                <td>Feb 10</td>
+            </tr>
+             <tr>
+               <td> <a data-toggle="collapse" href="#p5">Lab 12</a>
+                    <div id="p5" class="collapse">
+                        <div class="list-group">
+                            <li class="list-group-item"> Part 1  </li>
+                            <li class="list-group-item"> Part 2 & 3 </li>
+                        </div>
+                    </div>
+                </td>
+                <td>Feb 1</td>
+                <td>Feb 10</td>
+            </tr>
+             <tr>
+               <td> <a data-toggle="collapse" href="#p5">Lab 13</a>
+                    <div id="p5" class="collapse">
+                        <div class="list-group">
+                            <li class="list-group-item"> Part 1  </li>
+                            <li class="list-group-item"> Part 2 & 3 </li>
+                        </div>
+                    </div>
+                </td>
+                <td>Feb 1</td>
+                <td>Feb 10</td>
+            </tr>
+             <tr>
+               <td> <a data-toggle="collapse" href="#p5">Lab 14</a>
+                    <div id="p5" class="collapse">
+                        <div class="list-group">
+                            <li class="list-group-item"> Part 1  </li>
+                            <li class="list-group-item"> Part 2 & 3 </li>
+                        </div>
+                    </div>
+                </td>
+                <td>Feb 1</td>
+                <td>Feb 10</td>
+            </tr>
         </table>
     </div>
 </section>
 
+<div>
+    <footer class="footer">
+        <div class="container" class>
+            <p class="footer_title">CS132 Spring 2017</p>
+            <p><a href="mailto:cs132tas@lists.brown.edu">cs132tas@lists.brown.edu</a></p>
+        </div>
+    </footer>
+</div>
 
-<footer class="footer">
-    <div class="container" class>
-        <p class="courseName col-xs-12 col-sm-6 col-md-6">
-            CS132 Spring 2017
-            &bull;
-        </p>
-        <p class="text-right col-xs-12 col-sm-6 col-md-6">
-            <a href="mailto:cs132tas@lists.brown.edu">cs132tas@lists.brown.edu</a>
-        </p>
-    </div>
-</footer>
 <script src="static/js/main.js" type="text/javascript"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
