--- a/lectures.html
+++ b/lectures.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-
-    <title>CSCI1800</title>
+    <title>CS132</title>
     <meta content='Modern Web Apps' name='description'>
     <meta content='width=device-width, initial-scale=1.0' name='viewport'>
     <!-- jQuery and Bootstrap -->
@@ -96,17 +95,15 @@
     </div>
 </section>
 
-<footer class="footer">
-    <div class="container" class>
-        <p class="courseName col-xs-12 col-sm-6 col-md-6">
-            CS132 Spring 2017
-            &bull;
-        </p>
-        <p class="text-right col-xs-12 col-sm-6 col-md-6">
-            <a href="mailto:cs132tas@lists.brown.edu">cs132tas@lists.brown.edu</a>
-        </p>
-    </div>
-</footer>
+<div>
+    <footer class="footer">
+        <div class="container" class>
+            <p class="footer_title">CS132 Spring 2017</p>
+            <p><a href="mailto:cs132tas@lists.brown.edu">cs132tas@lists.brown.edu</a></p>
+        </div>
+    </footer>
+</div>
+
 <script src="static/js/main.js" type="text/javascript"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
