--- a/resources.html
+++ b/resources.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-
-    <title>CSCI1800</title>
+    <title>CS132</title>
     <meta content='Modern Web Apps' name='description'>
     <meta content='width=device-width, initial-scale=1.0' name='viewport'>
     <!-- jQuery and Bootstrap -->
@@ -19,123 +18,101 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-default navbar-top">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand hidden-lg hidden-md hidden-sm" href="#">CS132</a>
-            </div>
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li ><a href="index.html"><b>Home</b></a></li>
-                    <li ><a href="assignments.html"><b>Assignments</b></a></li>
-                    <li ><a href="calendar.html"><b>Calendar</b></a></li>
-                    <li ><a href="lectures.html"><b>Lectures</b></a></li>
-                    <li class="active"><a href="labs.html"><b>Labs</b></a></li>
-                    <li ><a href="resources.html"><b>Resources</b></a></li>
-                    <li ><a href="staff.html"><b>Staff</b></a></li>
-                </ul>
-            </div>
+<nav class="navbar navbar-default navbar-top">
+    <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand hidden-lg hidden-md hidden-sm" href="#">CS132</a>
         </div>
-    </nav>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li ><a href="index.html"><b>Home</b></a></li>
+                <li ><a href="assignments.html"><b>Assignments</b></a></li>
+                <li ><a href="calendar.html"><b>Calendar</b></a></li>
+                <li ><a href="lectures.html"><b>Lectures</b></a></li>
+                <li ><a href="labs.html"><b>Labs</b></a></li>
+                <li class="active"><a href="resources.html"><b>Resources</b></a></li>
+                <li ><a href="staff.html"><b>Staff</b></a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
 
 <section class="view_top">
     <div class="container">
         <h1>CS132</h1>
-        <div class="labs_view_top"><h2>Labs</h2></div>
+        <div class="resources_view_top"><h2>Resources</h2></div>
     </div>
 </section>
 
-<section class="labs_list">
-    <div class="container">
-        <table>
-            <tr>
-                <th>Pre Lab</th>
-                <th>Lab</th>
-                <th>Date</th>
-            </tr>
-            <tr>
-                <td> <a data-toggle="collapse" href="#p1">Lab 1</a>
-                    <div id="p1" class="collapse">
-                        <div class="list-group">
-                            <li class="list-group-item"> Part 1  </li>
-                            <li class="list-group-item"> Part 2 & 3 </li>
-                        </div>
+<section class="resources">
+    <div class="resources">
+        <ul>
+            <li style="text-decoration: underline;"><a data-toggle="collapse" href="#r1"><h3 class="resources_accordion">Syllabus</h3></a></li>
+                <div id="r1" class="collapse">
+                    <div class="list-group">
+                        <li class="list-group-item"><a style="color: black;" target="_blank" href="http://cs.brown.edu/courses/csci1320/syllabus.pdf">Link</a></li>
                     </div>
-                </td>
-                <td>Feb 1</td>
-                <td>Feb 10</td>
-            </tr>
-            <tr>
-               <td> <a data-toggle="collapse" href="#p2">Lab 2</a>
-                    <div id="p2" class="collapse">
-                        <div class="list-group">
-                            <li class="list-group-item"> Part 1  </li>
-                            <li class="list-group-item"> Part 2 & 3 </li>
-                        </div>
+                </div>
+           <li style="text-decoration: underline;"><a data-toggle="collapse" href="#r2"><h3 class="resources_accordion">Collaboration Policy</h3></a></li>
+                <div id="r2" class="collapse">
+                    <div class="list-group">
+                        <li class="list-group-item"><a style="color: black;" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSeWOfnbrHCUruUJqWGFZCL7Gta6M3fisoI4j2jw99ZtocIqxw/viewform">Link</a></li>
                     </div>
-                </td>
-                <td>Feb 1</t d>
-                <td>Feb 10</td>
-            </tr>
-            <tr>
-               <td> <a data-toggle="collapse" href="#p3">Lab 3</a>
-                    <div id="p3" class="collapse">
-                        <div class="list-group">
-                            <li class="list-group-item"> Part 1  </li>
-                            <li class="list-group-item"> Part 2 & 3 </li>
-                        </div>
+                </div>
+        <!-- </ul> -->
+            <li><a data-toggle="collapse" href="#r3"><h3 class="resources_accordion">TA-Provided Mini-Guides</h3></a></li>
+                <div id="r3" class="collapse">
+                    <div class="list-group">
+                        <li class="list-group-item">Guide 1</li>
+                        <li class="list-group-item">Guide 2</li>
                     </div>
-                </td>
-                <td>Feb 1</td>
-                <td>Feb 10</td>
-            </tr>
-            <tr>
-               <td> <a data-toggle="collapse" href="#p4">Lab 4</a>
-                    <div id="p4" class="collapse">
-                        <div class="list-group">
-                            <li class="list-group-item"> Part 1  </li>
-                            <li class="list-group-item"> Part 2 & 3 </li>
-                        </div>
+                </div>
+            <li><a data-toggle="collapse" href="#r4"><h3 class="resources_accordion">External Resources</h3></a></li>
+                <div id="r4" class="collapse">
+                    <div class="list-group">
+                        <li class="list-group-item">Guide 1</li>
+                        <li class="list-group-item">Guide 2</li>
                     </div>
-                </td>
-                <td>Feb 1</td>
-                <td>Feb 10</td>
-            </tr>
-            <tr>
-               <td> <a data-toggle="collapse" href="#p5">Lab 5</a>
-                    <div id="p5" class="collapse">
-                        <div class="list-group">
-                            <li class="list-group-item"> Part 1  </li>
-                            <li class="list-group-item"> Part 2 & 3 </li>
-                        </div>
-                    </div>
-                </td>
-                <td>Feb 1</td>
-                <td>Feb 10</td>
-            </tr>
-        </table>
-    </div>
+                </div>
+        </ul>
+    
 </section>
 
+<script>
+    var acc = document.getElementsByClassName("resources_accordion");
+    var i;
+    for (i = 0; i < acc.length; i++) {
+        acc[i].onclick = function(){
+            /* Toggle between adding and removing the "active" class,
+            to highlight the button that controls the panel */
+            this.classList.toggle("active");
+            /* Toggle between hiding and showing the active panel */
+            var panel = this.nextElementSibling;
+            if (panel.style.display === "block") {
+                panel.style.display = "none";
+            } else {
+                panel.style.display = "block";
+            }
+        }
+    }
+</script>
 
-<footer class="footer">
-    <div class="container" class>
-        <p class="courseName col-xs-12 col-sm-6 col-md-6">
-            CS132 Spring 2017
-            &bull;
-        </p>
-        <p class="text-right col-xs-12 col-sm-6 col-md-6">
-            <a href="mailto:cs132tas@lists.brown.edu">cs132tas@lists.brown.edu</a>
-        </p>
-    </div>
-</footer>
+<div>
+    <footer class="footer">
+        <div class="container" class>
+            <p class="footer_title">CS132 Spring 2017</p>
+            <p><a href="mailto:cs132tas@lists.brown.edu">cs132tas@lists.brown.edu</a></p>
+        </div>
+    </footer>
+</div>
+
 <script src="static/js/main.js" type="text/javascript"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
