--- a/staff.html
+++ b/staff.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html>
+<html class="staff_main">
 <head>
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
 
-    <title>CSCI1800</title>
+    <title>CS132</title>
     <meta content='Modern Web Apps' name='description'>
     <meta content='width=device-width, initial-scale=1.0' name='viewport'>
     <!-- jQuery and Bootstrap -->
@@ -48,50 +48,106 @@
 <section class="view_top">
     <div class="container">
         <h1>CS132</h1>
-        <div class="view_top"><h2>Staff</h2></div>
+        <div class="labs_view_top"><h2>Labs</h2></div>
     </div>
 </section>
 
-<section class="about">
-    <div class="container highlight-card" style="min-height:0px">
-        <h3>Welcome to CS132</h3>
+
+<section class="staff_list">
+    <table>
+    <tr>
+        <div class="staff_header">
+            <h2>Professor</h2><p><a style="color: blue;" href="mailto:spr@cs.brown.edu">spr@cs.brown.edu</a></p>
+            <div id="reiss" class="person">
+                <div id="reiss_img" class="staff_pic"></div>
+                <p class="name">Steve Reiss</p>
+            </div>
         </div>
+    </tr>
+    <tr>
+        <div class="staff_header">
+            <h2>Head TAs</h2><p><a style="color: blue;"href="mailto:cs1320headtas@cs.brown.edu">cs1320headtas@lists.brown.edu</a></p>
+            <ul>
+                <div class="staff_pic"></div>
+                <li id="adevor" class="person">
+                    <p class="name">Alberta Devor</p>
+                </li>
+                <div class="staff_pic"></div>
+                <li id="numbanho" class="person">
+                    <p class="name">Nathan Umbanhowar</p>
+                </li>
+            </ul>
+        </div>
+    </tr>
+    <tr>
+        <div class="staff_header">
+            <h2>TAs</h2><p><a style="color: blue;"href="mailto:cs1320headtas@cs.brown.edu">cs1320tas@lists.brown.edu</a></p>
+            <ul>
+                <li id="adutta2" class="person">
+                    <div class="staff_pic"></div>
+                    <p class="name">Abishek Dutta</p>
+                </li>
+                <li id="abcruz" class="person">
+                    <div class="staff_pic"></div>
+                    <p class="name">Anthony Cruz</p>
+                </li>
+                <li id="abcruz" class="person">
+                    <div class="staff_pic"></div>
+                    <p class="name">Dan Glauber</p>
+                </li>
+                <li id="abcruz" class="person">
+                    <div class="staff_pic"></div>
+                    <p class="name">Hoang Nguyen</p>
+                </li>
+                <li id="abcruz" class="person">
+                    <div class="staff_pic"></div>
+                    <p class="name">Katie Liu</p>
+                </li>
+                <li id="abcruz" class="person">
+                    <div class="staff_pic"></div>
+                    <p class="name">Linda Chang</p>
+                </li>
+                <li id="abcruz" class="person">
+                    <div class="staff_pic"></div>
+                    <p class="name">Luyi Lu</p>
+                </li>
+                <li id="abcruz" class="person">
+                    <div class="staff_pic"></div>
+                    <p class="name">Queen Nefertiti Shabazz</p>
+                </li>
+                <li id="abcruz" class="person">
+                    <div class="staff_pic"></div>
+                    <p class="name">William Truong</p>
+                </li>
+                <li id="abcruz" class="person">
+                    <div class="staff_pic"></div>
+                    <p class="name">Yunny Chung</p>
+                </li>
+            </ul>
+        </div>
+    </tr>
+    </table>
 </section>
 
-<section class="announcements">
-    <div class="container">
-        <h3 style="margin: 0 0">Info</h3>
-
-        <ul class="announcements-list">
-        </ul>
-    </div>
-</section>
-
-<section class="announcements">
-	<div class="container">
-	</div>
-</section>
+<div>
     <footer class="footer">
         <div class="container" class>
-            <p class="courseName col-xs-12 col-sm-6 col-md-6">
-                CS132 Spring 2017
-                &bull;
-            </p>
-            <p class="text-right col-xs-12 col-sm-6 col-md-6">
-                <a href="mailto:cs132tas@lists.brown.edu">cs132tas@lists.brown.edu</a>
-            </p>
+            <p class="footer_title">CS132 Spring 2017</p>
+            <p><a href="mailto:cs132tas@lists.brown.edu">cs132tas@lists.brown.edu</a></p>
         </div>
     </footer>
-    <script src="static/js/main.js" type="text/javascript"></script>
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+</div>
 
-      ga('create', 'UA-49649749-2', 'auto');
-      ga('send', 'pageview');
-    </script>
+<script src="static/js/main.js" type="text/javascript"></script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-49649749-2', 'auto');
+  ga('send', 'pageview');
+</script>
     
 </body>
 </html>
