--- a/assignments.html
+++ b/assignments.html
@@ -33,6 +33,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li ><a href="index.html"><b>Home</b></a></li>
+                    <li ><a href="news.html"><b>News</b></a></li>
                     <li class="active"><a href="assignments.html"><b>Assignments</b></a></li>
                     <li ><a href="calendar.html"><b>Calendar</b></a></li>
                     <li ><a href="lectures.html"><b>Lectures</b></a></li>
@@ -54,70 +55,128 @@
 <section class="assignments_list">
 	<div class="container">
         <table>
+            <h2>Concentrators</h2>
             <tr>
                 <th>Assignment</th>
-                <th>Release Date</th>
                 <th>Due Date</th>
             </tr>
             <tr>
-                <td> <a data-toggle="collapse" href="#p1">Project 1</a>
+                <td> <a data-toggle="collapse" href="#p1">Logistics and Setup</a>
                     <div id="p1" class="collapse">
                         <div class="list-group">
-                            <li class="list-group-item"> Part 1  </li>
-                            <li class="list-group-item"> Part 2 & 3 </li>
+                            <li class="list-group-item"> Part 1</li>
+                            <li class="list-group-item"> Part</li>
                         </div>
                     </div>
                 </td>
-                <td>Feb 1</td>
-                <td>Feb 10</td>
+                <td>Feb 3</td>
             </tr>
             <tr>
-               <td> <a data-toggle="collapse" href="#p2">Project 2</a>
+               <td> <a data-toggle="collapse" href="#p2">Static Web Design</a>
                     <div id="p2" class="collapse">
                         <div class="list-group">
-                            <li class="list-group-item"> Part 1  </li>
-                            <li class="list-group-item"> Part 2 & 3 </li>
+                            <li class="list-group-item"> Part 1</li>
+                            <li class="list-group-item"> Part</li>
                         </div>
                     </div>
                 </td>
-                <td>Feb 1</t d>
                 <td>Feb 10</td>
             </tr>
             <tr>
-               <td> <a data-toggle="collapse" href="#p3">Project 3</a>
+               <td> <a data-toggle="collapse" href="#p3">BieberFeed</a>
                     <div id="p3" class="collapse">
                         <div class="list-group">
-                            <li class="list-group-item"> Part 1  </li>
-                            <li class="list-group-item"> Part 2 & 3 </li>
+                            <li class="list-group-item"> Part 1</li>
+                            <li class="list-group-item"> Part</li>
                         </div>
                     </div>
                 </td>
-                <td>Feb 1</td>
-                <td>Feb 10</td>
+                <td>Feb 23</td>
             </tr>
             <tr>
-               <td> <a data-toggle="collapse" href="#p4">Project 4</a>
+               <td> <a data-toggle="collapse" href="#p4">Chatroom</a>
                     <div id="p4" class="collapse">
                         <div class="list-group">
-                            <li class="list-group-item"> Part 1  </li>
-                            <li class="list-group-item"> Part 2 & 3 </li>
+                            <li class="list-group-item"> Part 1</li>
+                            <li class="list-group-item"> Part</li>
                         </div>
                     </div>
                 </td>
-                <td>Feb 1</td>
+                <td>Mar 15</td>
+            </tr>
+            <tr>
+               <td> <a data-toggle="collapse" href="#p5">Realtime</a>
+                    <div id="p5" class="collapse">
+                        <div class="list-group">
+                            <li class="list-group-item"> Part 1</li>
+                            <li class="list-group-item"> Part</li>
+                        </div>
+                    </div>
+                </td>
+                <td>Mar 24</td>
+            </tr>
+        </table>
+        <br>
+        <table>
+            <h2>Designers</h2>
+            <tr>
+                <th>Assignment</th>
+                <th>Due Date</th>
+            </tr>
+            <tr>
+                <td> <a data-toggle="collapse" href="#p6">Logistics and Setup</a>
+                    <div id="p6" class="collapse">
+                        <div class="list-group">
+                            <li class="list-group-item"> Part 1</li>
+                            <li class="list-group-item"> Part 2</li>
+                        </div>
+                    </div>
+                </td>
+                <td>Feb 3</td>
+            </tr>
+            <tr>
+               <td> <a data-toggle="collapse" href="#p7">Static Web Design</a>
+                    <div id="p7" class="collapse">
+                        <div class="list-group">
+                            <li class="list-group-item"> Part 1</li>
+                            <li class="list-group-item"> Part 2</li>
+                        </div>
+                    </div>
+                </td>
                 <td>Feb 10</td>
             </tr>
             <tr>
-               <td> <a data-toggle="collapse" href="#p5">Project 5</a>
-                    <div id="p5" class="collapse">
+               <td> <a data-toggle="collapse" href="#p8">BieberFeed</a>
+                    <div id="p8" class="collapse">
                         <div class="list-group">
-                            <li class="list-group-item"> Part 1  </li>
-                            <li class="list-group-item"> Part 2 & 3 </li>
+                            <li class="list-group-item"> Part 1</li>
+                            <li class="list-group-item"> Part 2</li>
                         </div>
                     </div>
                 </td>
-                <td>Feb 1</td>
-                <td>Feb 10</td>
+                <td>Feb 23</td>
+            </tr>
+            <tr>
+               <td> <a data-toggle="collapse" href="#p9">Chatroom</a>
+                    <div id="p9" class="collapse">
+                        <div class="list-group">
+                            <li class="list-group-item"> Part 1</li>
+                            <li class="list-group-item"> Part 2</li>
+                        </div>
+                    </div>
+                </td>
+                <td>Mar 15</td>
+            </tr>
+            <tr>
+               <td> <a data-toggle="collapse" href="#p10">Realtime</a>
+                    <div id="p10" class="collapse">
+                        <div class="list-group">
+                            <li class="list-group-item"> Part 1</li>
+                            <li class="list-group-item"> Part</li>
+                        </div>
+                    </div>
+                </td>
+                <td>Mar 24</td>
             </tr>
         </table>
 	</div>
