--- a/calendar.html
+++ b/calendar.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html class="calendar_main">
 <head>
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
@@ -22,16 +22,13 @@
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand hidden-lg hidden-md hidden-sm" href="#">CS132</a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li ><a href="index.html"><b>Home</b></a></li>
+                    <li ><a href="news.html"><b>News</b></a></li>
                     <li ><a href="assignments.html"><b>Assignments</b></a></li>
                     <li class="active"><a href="calendar.html"><b>Calendar</b></a></li>
                     <li ><a href="lectures.html"><b>Lectures</b></a></li>
@@ -50,6 +47,11 @@
     </div>
 </section>
 
+<div class="embedded_calendar">
+      <p>This calendar will be updated throughout the semester.</p><p><strong>NOTE:</strong> all assignments are due at
+      11:59pm.</p> 
+      <iframe src="https://calendar.google.com/calendar/embed?src=mat0oefur4hjd4908h7afv2q2o%40group.calendar.google.com&ctz=America/New_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+</div>
 <div>
     <footer class="footer">
         <div class="container" class>
