--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="index.html"><b>Home</b></a></li>
+                    <li ><a href="news.html"><b>News</b></a></li>
                     <li ><a href="assignments.html"><b>Assignments</b></a></li>
                     <li ><a href="calendar.html"><b>Calendar</b></a></li>
                     <li ><a href="lectures.html"><b>Lectures</b></a></li>
@@ -51,16 +52,83 @@
     </div>
 </section>
 
-<section class="course_info">
-    <div class="info_list">
-        
-    </div>
-</section>
+<div class="container">
+    <div class="course_info">
+    <h1>Welcome to CS132</h1>
+        <p> CS132, <em>Creating Modern Web Applications</em>, is a spring semester course within the
+        Brown CS department. The course has two tracks, one intended for CS concentrators,
+        and one intended for non-concentrators with previous design experience. It takes a
+        holistic look at the process of developing web and mobile applications and aims to bring the
+        students to a point of mastery of many of the most used web technologies, and
+        development practices. The course includes a semester long group final project
+        in which the students will be working with external companies, non-profits, and
+        other organizations.</p>
+        <p>The class will be held in Metcalf Auditorium 10am to 10:50am on Monday, Wednesday, and Friday.</p>
+    <h2>Final Projects</h2>
+    <p>The materials covered in CS132 culminates in a final project, where students work
+    in groups to implement a web application for a client.
+    Examples of previous projects include:
+    <ul>
+        <li>A front end to let spectators provide input regarding music volume and fire status for Waterfire.</li>
+        <li> A web site for posting of free cultural events in NYC</li>
+        <li>Mobile remote for Shelby.tv</li>
+        <li>Food truck locator</li>
+        <li>Music player for one or more business locations</li>
+        <li>Textbook exchange web site</li>
+        <li>Visualizer for Tracelytics</li>
+        <li>Web shell for MongoDB</li>
+        <li>Polling using text messaging via Twilio</li>
+        <li>See the <a style="color: cyan; text-decoration: underline;" href='submissions.html'>submissions page</a> for information on submitting a project.</p></li>
 
-<section class="announcements">
-	<div class="container">
-	</div>
-</section>
+    </ul>
+    <p>CS132 will allow a number of student projects.
+        A successful student project proposal is:
+    <ul>
+        <li>Well-defined: you should know not only the specifics of your project
+        (who would use it? how would they use it?), but what technologies you
+        might use. You should also have a clear way of evaluating the project.
+        Define what a successful project would look like.</li>
+        <li>Well-scoped: the TAs have to believe it can be successfully completed during the semester by
+        an appropriate team of students.</li>
+        <li>Well-paced: you should have concrete milestones and checkpoints with your
+        mentor TA throughout the semester.</li>
+    </ul>
+    </p>
+    <p>If your proposal is accepted you will serve as a mentor for your project.
+    This means you'll be responsible for your project and the rest of your team.
+    Other students will be able to select your project like any other and we will assign you an
+    appropriate project team.</p>
+
+    <p>Student project proposals should be sent to cs1320headtas@lists.brown.edu as early as possible
+    and no later than the second class.  Project proposals should include a paragraph
+    pitching your project to students.</p>
+
+    <h2>Different Tracks</h2>
+
+    <h3>Who should take CS132's Concentrator Track?</h3>
+    <p>CS132's <b>concentrator track</b> is appropriate for any student who has completed an intro level CS course (CS15, CS17, CS19) or has equivalent programming experience. Students should be comfortable with basic programming concepts.</p> 
+
+    <p>Computer Science concentrators (or potential concentrators) are <b>highly encouraged</b>
+    to take the concentrator track; a student who has taken CS15/17/19 has the required
+    rigorous programming background to succeed in that track. First year students who have taken CS15/17/19 or equivalent are welcome to register for the course.</p>
+
+    <p>CS33 (Introduction to Computer Systems) and CS32 (Introduction to Software Engineering) are listed on CAB as recommended courses. Having taken either of these courses certainly will make the material easier, but  they are by no means necessary for students to succeed in CS132's concentrator track.</p>
+
+    <p> Students who wish to take CS132 as a capstone course must take CS132 through the concentrator track</p>
+
+    <p> If you are still unsure about which track of the course is right for you contact the TAs: cs1320tas@lists.brown.edu</p>
+    <h2>Who should take CS132's Design Track?</h2>
+    <p>CS132's <b>design track</b> is appropriate for students with a <b> prior design background</b>. Students are expected to have an understanding of a design software of their choice. Students will learn how to apply their preexisting design knowledge to web design.</p>
+
+    <p>The design track is most appropriate for non-concentrators with design experience, as well as most RISD students.</p>
+
+    <p> If you are still unsure about which track of the course is right for you contact the TAs: cs1320tas@lists.brown.edu</p>
+    <h2>A note for Capstone-seeking seniors.</h2>
+    <p>Students taking CS132 for capstone credit must take the concentrator track and have
+    previously completed either CS32 or CS33.  In addition, they are expected to have significant involvement in their groups as leaders. Submitting your own project proposal is not necessary; one may be provided for you.</p>
+    <h2>Other Information</h2>
+    <p>The first class will be held in the Metcalf Research Building auditorium at 10am to 10:50am on
+    Wednesday the 25th, 2017.</p>
 
 <div>
     <footer class="footer">
