--- a/news.html
+++ b/news.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="lectures_main">
+<html class="news_main">
 <head>
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
@@ -33,10 +33,9 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li ><a href="index.html"><b>Home</b></a></li>
-                    <li ><a href="news.html"><b>News</b></a></li>
+                    <li class="active"><a href="news.html"><b>News</b></a></li>
                     <li ><a href="assignments.html"><b>Assignments</b></a></li>
                     <li ><a href="calendar.html"><b>Calendar</b></a></li>
-                    <li class="active"><a href="lectures.html"><b>Lectures</b></a></li>
                     <li ><a href="labs.html"><b>Labs</b></a></li>
                     <li ><a href="resources.html"><b>Resources</b></a></li>
                     <li ><a href="staff.html"><b>Staff</b></a></li>
@@ -48,52 +47,17 @@
 <section class="view_top">
     <div class="container">
         <h1>CS132</h1>
-        <div class="view_top"><h2>Lectures</h2></div>
+        <div class="view_top"><h2>News</h2></div>
     </div>
 </section>
-
-<section class="lectures_list">
-    <div class="container">
-        <table>
-            <tr>
-                <th>Lecture Title</th>
-                <th>Date</th>
-            </tr>
-            <tr>
-                <td> <a data-toggle="collapse" href="#p1">Lecture 1</a>
-                    <div id="p1" class="collapse">
-                        <div class="list-group">
-                            <li class="list-group-item"> Part 1  </li>
-                            <li class="list-group-item"> Part 2 & 3 </li>
-                        </div>
-                    </div>
-                </td>
-                <td>Feb 1</td>
-            </tr>
-            <tr>
-               <td> <a data-toggle="collapse" href="#p2">Lecture 2</a>
-                    <div id="p2" class="collapse">
-                        <div class="list-group">
-                            <li class="list-group-item"> Part 1  </li>
-                            <li class="list-group-item"> Part 2 & 3 </li>
-                        </div>
-                    </div>
-                </td>
-                <td>Feb 1</td>
-            </tr>
-             <tr>
-               <td> <a data-toggle="collapse" href="#p3">Lecture 3</a>
-                    <div id="p3" class="collapse">
-                        <div class="list-group">
-                            <li class="list-group-item"> Part 1  </li>
-                            <li class="list-group-item"> Part 2 & 3 </li>
-                        </div>
-                    </div>
-                </td>
-                <td>Feb 1</td>
-            </tr>
-        </table>
-    </div>
+    
+<section class="news_list">
+    <h1>Announcements</h1>
+    <ul>
+        <li>02/08/17</li>
+        <li>01/30/17</li>
+        <li>01/25/17</li>
+    </ul>
 </section>
 
 <div>
