--- a/staff.html
+++ b/staff.html
@@ -34,6 +34,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li ><a href="index.html"><b>Home</b></a></li>
+                    <li ><a href="news.html"><b>News</b></a></li>
                     <li ><a href="assignments.html"><b>Assignments</b></a></li>
                     <li ><a href="calendar.html"><b>Calendar</b></a></li>
                     <li ><a href="lectures.html"><b>Lectures</b></a></li>
