--- a/labs.html
+++ b/labs.html
@@ -33,6 +33,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li ><a href="index.html"><b>Home</b></a></li>
+                    <li ><a href="news.html"><b>News</b></a></li>
                     <li ><a href="assignments.html"><b>Assignments</b></a></li>
                     <li ><a href="calendar.html"><b>Calendar</b></a></li>
                     <li ><a href="lectures.html"><b>Lectures</b></a></li>
@@ -55,177 +56,40 @@
     <div class="container">
         <table>
             <tr>
-                <th>Pre Lab</th>
-                <th>Lab</th>
                 <th>Date</th>
+                <th>Lab Title</th>
+                <th>Pre Lab</th>
+                <th>Results</th>
             </tr>
             <tr>
-                <td> <a data-toggle="collapse" href="#p1">Lab 1</a>
-                    <div id="p1" class="collapse">
-                        <div class="list-group">
-                            <li class="list-group-item"> Part 1  </li>
-                            <li class="list-group-item"> Part 2 & 3 </li>
-                        </div>
-                    </div>
-                </td>
                 <td>Feb 1</td>
-                <td>Feb 10</td>
+                <td> <a target="_blank" href="http://cs.brown.edu/courses/csci1320/lectures/cs132lect04.pdf">HTML & CSS</a></td>
+                <td> <a target="_blank" href="http://cs.brown.edu/courses/csci1320/labs/lab1/htmlcss_lab.html">Link</a></td>
+                <td> <a target="_blank" href="http://cs.brown.edu/courses/csci1320/labshow01.html">Link</a></td>
             </tr>
             <tr>
-               <td> <a data-toggle="collapse" href="#p2">Lab 2</a>
-                    <div id="p2" class="collapse">
-                        <div class="list-group">
-                            <li class="list-group-item"> Part 1  </li>
-                            <li class="list-group-item"> Part 2 & 3 </li>
-                        </div>
-                    </div>
-                </td>
-                <td>Feb 1</t d>
-                <td>Feb 10</td>
+                <td>Feb 8</td>
+                <td> <a target="_blank" href="http://cs.brown.edu/courses/csci1320/lectures/cs132lect04.pdf">HTML & CSS</a></td>
+                <td> <a target="_blank" href="https://cs.brown.edu/courses/csci1320/labs/lab2/prelab2.html">Link</a></td>
+                <td> <a target="_blank" href="http://cs.brown.edu/courses/csci1320/labshow02.html">Link</a></td>
             </tr>
             <tr>
-               <td> <a data-toggle="collapse" href="#p3">Lab 3</a>
-                    <div id="p3" class="collapse">
-                        <div class="list-group">
-                            <li class="list-group-item"> Part 1  </li>
-                            <li class="list-group-item"> Part 2 & 3 </li>
-                        </div>
-                    </div>
-                </td>
-                <td>Feb 1</td>
-                <td>Feb 10</td>
+                <td>Feb 13</td>
+               <td> <a target="_blank" href="http://cs.brown.edu/courses/csci1320/labs/frameworks_lab/frameworks_prelab.html">JS Frameworks</a></td>
+                <td>TBD</td>
+                <td>TBD</td>
             </tr>
             <tr>
-               <td> <a data-toggle="collapse" href="#p4">Lab 4</a>
-                    <div id="p4" class="collapse">
-                        <div class="list-group">
-                            <li class="list-group-item"> Part 1  </li>
-                            <li class="list-group-item"> Part 2 & 3 </li>
-                        </div>
-                    </div>
-                </td>
-                <td>Feb 1</td>
-                <td>Feb 10</td>
+                <td>TBD</td>
+                <td>TBD</td>
+                <td>TBD</td>
+                <td>TBD</td>
             </tr>
             <tr>
-               <td> <a data-toggle="collapse" href="#p5">Lab 5</a>
-                    <div id="p5" class="collapse">
-                        <div class="list-group">
-                            <li class="list-group-item"> Part 1  </li>
-                            <li class="list-group-item"> Part 2 & 3 </li>
-                        </div>
-                    </div>
-                </td>
-                <td>Feb 1</td>
-                <td>Feb 10</td>
-            </tr>
-             <tr>
-               <td> <a data-toggle="collapse" href="#p5">Lab 6</a>
-                    <div id="p5" class="collapse">
-                        <div class="list-group">
-                            <li class="list-group-item"> Part 1  </li>
-                            <li class="list-group-item"> Part 2 & 3 </li>
-                        </div>
-                    </div>
-                </td>
-                <td>Feb 1</td>
-                <td>Feb 10</td>
-            </tr>
-             <tr>
-               <td> <a data-toggle="collapse" href="#p5">Lab 7</a>
-                    <div id="p5" class="collapse">
-                        <div class="list-group">
-                            <li class="list-group-item"> Part 1  </li>
-                            <li class="list-group-item"> Part 2 & 3 </li>
-                        </div>
-                    </div>
-                </td>
-                <td>Feb 1</td>
-                <td>Feb 10</td>
-            </tr>
-             <tr>
-               <td> <a data-toggle="collapse" href="#p5">Lab 8</a>
-                    <div id="p5" class="collapse">
-                        <div class="list-group">
-                            <li class="list-group-item"> Part 1  </li>
-                            <li class="list-group-item"> Part 2 & 3 </li>
-                        </div>
-                    </div>
-                </td>
-                <td>Feb 1</td>
-                <td>Feb 10</td>
-            </tr>
-             <tr>
-               <td> <a data-toggle="collapse" href="#p5">Lab 9</a>
-                    <div id="p5" class="collapse">
-                        <div class="list-group">
-                            <li class="list-group-item"> Part 1  </li>
-                            <li class="list-group-item"> Part 2 & 3 </li>
-                        </div>
-                    </div>
-                </td>
-                <td>Feb 1</td>
-                <td>Feb 10</td>
-            </tr>
-             <tr>
-               <td> <a data-toggle="collapse" href="#p5">Lab 10</a>
-                    <div id="p5" class="collapse">
-                        <div class="list-group">
-                            <li class="list-group-item"> Part 1  </li>
-                            <li class="list-group-item"> Part 2 & 3 </li>
-                        </div>
-                    </div>
-                </td>
-                <td>Feb 1</td>
-                <td>Feb 10</td>
-            </tr>
-             <tr>
-               <td> <a data-toggle="collapse" href="#p5">Lab 11</a>
-                    <div id="p5" class="collapse">
-                        <div class="list-group">
-                            <li class="list-group-item"> Part 1  </li>
-                            <li class="list-group-item"> Part 2 & 3 </li>
-                        </div>
-                    </div>
-                </td>
-                <td>Feb 1</td>
-                <td>Feb 10</td>
-            </tr>
-             <tr>
-               <td> <a data-toggle="collapse" href="#p5">Lab 12</a>
-                    <div id="p5" class="collapse">
-                        <div class="list-group">
-                            <li class="list-group-item"> Part 1  </li>
-                            <li class="list-group-item"> Part 2 & 3 </li>
-                        </div>
-                    </div>
-                </td>
-                <td>Feb 1</td>
-                <td>Feb 10</td>
-            </tr>
-             <tr>
-               <td> <a data-toggle="collapse" href="#p5">Lab 13</a>
-                    <div id="p5" class="collapse">
-                        <div class="list-group">
-                            <li class="list-group-item"> Part 1  </li>
-                            <li class="list-group-item"> Part 2 & 3 </li>
-                        </div>
-                    </div>
-                </td>
-                <td>Feb 1</td>
-                <td>Feb 10</td>
-            </tr>
-             <tr>
-               <td> <a data-toggle="collapse" href="#p5">Lab 14</a>
-                    <div id="p5" class="collapse">
-                        <div class="list-group">
-                            <li class="list-group-item"> Part 1  </li>
-                            <li class="list-group-item"> Part 2 & 3 </li>
-                        </div>
-                    </div>
-                </td>
-                <td>Feb 1</td>
-                <td>Feb 10</td>
+                <td>TBD</td>
+                <td>TBD</td>
+                <td>TBD</td>
+                <td>TBD</td>
             </tr>
         </table>
     </div>
